--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -21,11 +21,11 @@
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="edit-book-btn">Edit This Book</button>
     <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="delete-book-btn" onclick = "return confirm('are you sure?')">Delete This Book</button>
   {{else if trade.id}}<!-- trade to be completed -->
-    <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: {{other_trader_rating}} out of 5 (5 is best)
+    <div class='boxframe-subj' id='trader1-rating'>Trader's Rating: <img class="star-rating" src={{other_trader_rating}} alt="star_rating">
     </div><br>
     <button type="button" class="btn btn-primary btn-xs complete-trade-btn" data-trade={{trade.id}} data-book={{book.id}} >Complete a Trade</button>
   {{else}} <! trade to be initialized -->
-    <div class='boxframe-subj' id='trader2-rating'>Trader's Rating: {{other_trader_rating}} out of 5 (5 is best)
+    <div class='boxframe-subj' id='trader2-rating'>Trader's Rating: <img class="star-rating" src={{other_trader_rating}} alt="star_rating">
     </div><br>
     <button type="button" class="btn btn-primary btn-xs" data-trader1={{trade.first_trader_id}} data-trader2={{book.user_id}}  data-book={{book.id}} data-title={{book.title}} id="request-trade-btn">Request a Trade</button>
   {{/unless}}
