--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -173,6 +173,12 @@ img {
   border-radius: 3px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.9);
 }
+
+.star-rating {
+  width: 50px;
+  height: 30px;
+  box-shadow: none;
+}
 #homepage-header {
   margin-left: 50px;
   padding-top: 20px;
