--- a/app/assets/javascripts/templates/userProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/userProfileTemplate.hbs
@@ -10,7 +10,7 @@
    <p class="indent">{{title}}</p>
   {{/data.books}}
   <p><strong>email:</strong> {{data.user.email}}</p>
-  <p><strong>Current Rating:</strong><span> {{data.rating}} out of 3 (3 is best)</p>
+  <p><strong>Current Rating: </strong><span><img class="star-rating" src={{data.rating}} alt="star_rating"></p>
 </div>
 {{#if data.user.visible}}
 <button class='btn btn-warning center' id='invisible-btn' data-id={{data.user.id}} >Make this user invisible</button>
